<resources>
    <string name="app_name">SmartCar</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="author">Marten Bosse</string>
    <string name="start_year">2016</string>
    <string name="car">W124</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_start">Start</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="menu_info">Info</string>
    <string name="menu_light">Licht</string>
    <string name="menu_air">Klima</string>
    <string name="menu_connectiontest">Verbindungtest</string>
    <string name="menu_tv">Fernsehen</string>
    <string name="menu_music">Musik</string>
    <string name="menu_navigation">Google Maps</string>
    <string name="menu_titel_more">Weitere Optionen</string>

    <string name="setting_lightincar">Innenraumbeleuchtung</string>
    <string name="setting_lightfoot">Fußraumbeleuchtung</string>
    <string name="setting_temprechts">Temperatur Rechts</string>
    <string name="setting_templinks">Temperatur Links</string>
    <string name="setting_EC">Klimakompressor</string>
    <string name="setting_dryer">Lufttrockner</string>
    <string name="setting_umluft">Umluft</string>

    <string name="speech_start">Spracherkennung gestartet</string>
    <string name="speech_finish">Spracherkennung abgeschlossen</string>
    <string name="speech_error">Spracherkennung nicht erfolgreich</string>

    <string name="info_titel">SmartCar Project</string>
    <string name="info_text">Dieses Projekt wurde von mir gestartet um mein älteres, aber sehr
                            schönes Auto Smart zu machen. Ich möchte die Mittelkonsole durch ein
                            Tablet ersetzen und damit die Heizung, Beleuchtung,... steuern</string>

</resources>
